--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             </svg>
                             <span>Hasilkan Alamat</span>
                         </button>
-                    </div>
+                    </div>                 
                     <div id="customResults" class="bg-gray-50 p-6 rounded-2xl border border-gray-200 min-h-[200px] custom-scrollbar max-h-80 overflow-y-auto">
                         <div class="flex flex-col items-center justify-center py-12">
                             <svg class="h-12 w-12 text-gray-300 mb-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -270,7 +270,7 @@
                 <!-- Copyright -->
                 <div class="border-t border-gray-700 pt-6">
                     <p class="text-gray-400 text-sm">
-                        © 2025 FongStudio. All rights reserved.
+                        © 2024 FongStudio. All rights reserved.
                     </p>
                 </div>
             </div>
@@ -297,13 +297,14 @@
     <script>
         // Data for dropdowns
         const gmailUsernames = [
-            "tortusiji", "lorotortu", "telutortu"
+            "terimajalah", "jeniperflower", "kobessahsarah", "taklakoh83", "ngakohganteng"
         ];
 
         const customDomains = [
-            "chatjilacap.biz.id"
+            "akunberkah.shop", ".akunberkah.shop", ".akunberkah.shop", ".akunberkah.shop", ".akunberkah.shop"
         ];
 
+      
         // Generate random string for username
         function generateRandomString(length) {
             const characters = 'abcdefghijklmnopqrstuvwxyz0123456789';
@@ -328,9 +329,9 @@
                 generateDotCombinations(prefix + suffix[0], suffix.substring(1));
 
                 if (prefix.length > 0) {
-                    generateDotCombinations(prefix + '.' + suffix[0], suffix.substring(1));
-                }
-            }
+                    generateDotCombinations(prefix + suffix[0], suffix.substring(1));
+               }
+             }
 
             if (cleanUsername.length > 0) {
                 generateDotCombinations(cleanUsername[0], cleanUsername.substring(1));
@@ -409,7 +410,7 @@
             populateDropdown('gmailDropdown', gmailUsernames);
             populateDropdown('customDomainDropdown', customDomains);
             document.getElementById('customUsernameDisplay').textContent = generateRandomString(10);
-
+            
             // Event listeners
             document.getElementById('checkInboxBtn').addEventListener('click', function() {
                 window.open('https://mail.google.com/mail/u/0/#inbox', '_blank');
