--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         ];
 
         const customDomains = [
-            "akunberkah.shop", ".akunberkah.shop", ".akunberkah.shop", ".akunberkah.shop", ".akunberkah.shop"
+            "akunberkah.shop", "crita.akunberkah.shop", "wajahe.akunberkah.shop", "agro.akunberkah.shop", "neptun.akunberkah.shop"
         ];
 
       
